--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,63 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+<div class="container">
+  <h1 class="page-header">Relação de Tarefas</h1>
+  <div class="panel panel-default">
+          <div class="panel-heading headertable"> Cadastro de tarefas </div>
+          <div class="panel-body">
+              
+              <table class="table table-bordered">
+                      
+                      <thead>
+                          <tr>
+                              <th class="col-sm-3 text-center">Responsável</th>
+                              <th class="col-sm-2 text-center">Email do responsável</th>
+                              <th class="col-sm-3 text-center">Descrição</th>
+                              <th class="col-sm-2 text-center">Status</th>
+                              <th class="col-sm-2 text-center">Ação</th>
+                          </tr>
+                      </thead>
+                      <tbody>
+                          <tr>
+                              <td><input type = "text" class="form-control" id="responsibleInput"/></input></td>
+                              <td><input type = "text" class="form-control" id="responsibleEmailInput"/></input></td>
+                              <td><input type = "text" class="form-control" id="descriptionInput"/></input></td>
+                              <td> <select name="selectStatus" class="form-control" ng-model="selectStatus" id="selectStatus" options="options"></select></td>
+                              <td class="text-center">
+                              <button class="btn btn-sm btn-default" type="button" name="button" ng-click="incluir()"> <span class="glyphicon glyphicon-plus"></span> Incluir</button>
+                              </td>
+                          </tr>
+                      </tbody>
+                  </table>
+                  </div>
+  </div>
+  <div class="panel panel-default">
+      <div class="panel-heading headertable"> Tarefas cadastradas </div>
+      <div class="panel-body">
+      
+          <table class="table table-bordered">
+                  
+              <thead>
+                  <tr>
+                      <th class="col-sm-3 text-center">Responsável</th>
+                      <th class="col-sm-2 text-center">Email do responsável</th>
+                      <th class="col-sm-3 text-center">Descrição</th>
+                      <th class="col-sm-2 text-center">Status</th>
+                      <th class="col-sm-2 text-center">Ação</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <tr ng-repeat="task in tasks">
+                      <td class="text-center vertical-text-align">{{task.responsible}}</td>
+                      <td class="text-center vertical-text-align"><span class="label label-default">{{task.responsibleEmail}}</span></td>
+                      <td class= "text-center vertical-text-align"><span class="label label-default">{{task.description}}</span></td>
+                      <td class="text-center vertical-text-align"><span class="label label-default">{{task.status}}</span>
+                      </td>
+                      <td class="text-center vertical-text-align">
+                          <button class="btn btn-sm btn-default" ng-click="modalEditar(task)" type="button" name="button"> <span class="glyphicon glyphicon-pencil"></span> Editar</button>
+                          <button class="btn btn-sm btn-default" ng-click="remover(task)" type="button" name="button"> <span class="glyphicon glyphicon-trash"></span> Excluir</button>
+                      </td>
+                  </tr>
+              </tbody>
+          </table>
+      </div>
+  </div>
 </div>
